--- a/ddscalc.ui
+++ b/ddscalc.ui
@@ -6,14 +6,20 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>439</width>
-    <height>326</height>
+    <width>444</width>
+    <height>340</height>
    </rect>
   </property>
   <property name="minimumSize">
    <size>
-    <width>390</width>
-    <height>300</height>
+    <width>444</width>
+    <height>340</height>
+   </size>
+  </property>
+  <property name="maximumSize">
+   <size>
+    <width>444</width>
+    <height>340</height>
    </size>
   </property>
   <property name="windowTitle">
@@ -38,13 +44,13 @@
     <property name="title">
      <string>Режим ЛЧМ</string>
     </property>
-    <widget class="QWidget" name="">
+    <widget class="QWidget" name="layoutWidget">
      <property name="geometry">
       <rect>
        <x>10</x>
        <y>20</y>
        <width>421</width>
-       <height>146</height>
+       <height>156</height>
       </rect>
      </property>
      <layout class="QGridLayout" name="gridLayout">
@@ -140,7 +146,7 @@
      </layout>
     </widget>
    </widget>
-   <widget class="QCheckBox" name="checkBox">
+   <widget class="QCheckBox" name="checkBoxAdd0x">
     <property name="geometry">
      <rect>
       <x>0</x>
@@ -153,7 +159,7 @@
      <string>Добавлять &quot;0x&quot;</string>
     </property>
    </widget>
-   <widget class="QCheckBox" name="checkBox_2">
+   <widget class="QCheckBox" name="checkBoxUpperCase">
     <property name="geometry">
      <rect>
       <x>170</x>
@@ -175,16 +181,22 @@
       <height>131</height>
      </rect>
     </property>
+    <property name="font">
+     <font>
+      <weight>50</weight>
+      <bold>false</bold>
+     </font>
+    </property>
     <property name="title">
      <string>Без модуляции</string>
     </property>
-    <widget class="QWidget" name="">
+    <widget class="QWidget" name="layoutWidget">
      <property name="geometry">
       <rect>
        <x>12</x>
        <y>31</y>
        <width>418</width>
-       <height>86</height>
+       <height>92</height>
       </rect>
      </property>
      <layout class="QGridLayout" name="gridLayout_2">
@@ -229,20 +241,10 @@
       </item>
      </layout>
     </widget>
-    <zorder>label</zorder>
-    <zorder>lineEditFrequencyReference</zorder>
-    <zorder>label</zorder>
-    <zorder>label_2</zorder>
-    <zorder>label_3</zorder>
-    <zorder>lineEditFrequencyReference</zorder>
-    <zorder>lineEditFrequencyOutput</zorder>
-    <zorder>lineEditDDSCodeH</zorder>
-    <zorder>lineEditDDSCodeM</zorder>
-    <zorder>lineEditDDSCodeL</zorder>
-    <zorder>groupBox_2</zorder>
    </widget>
-   <zorder>layoutWidget</zorder>
-   <zorder>label</zorder>
+   <zorder>checkBoxAdd0x</zorder>
+   <zorder>checkBoxUpperCase</zorder>
+   <zorder>groupBox</zorder>
    <zorder>groupBox_2</zorder>
   </widget>
  </widget>
